--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <!-- Majority of HTML goes here -->
-   <img src="UniversityLogo.png" alt="The University of Arizona Logo"><span><a href="https://shanecmasse.github.io/hometown">Hometown &nbsp;</a></span><span><a href="https://shanecmasse.github.io/gallery"> Gallery &nbsp;</a></span><span><a href="https://shanecmasse.github.io/poem"> Poem &nbsp;</a></span>
+   <img src="UniversityLogo.png" alt="The University of Arizona Logo"><span><a href="https://shanecmasse.github.io/2/hometown">Hometown &nbsp;</a></span><span><a href="https://shanecmasse.github.io/2/gallery"> Gallery &nbsp;</a></span><span><a href="https://shanecmasse.github.io/2/poem"> Poem &nbsp;</a></span>
    <h1>5 Things to Know About Rattlesnakes and Their Babies</h1>
    <p>UA College of Pharmacy | Aug. 6, 2014</p>
    <p>Arguably, snake season is year-round in Arizona, a state
