--- a/gallery.html
+++ b/gallery.html
@@ -21,6 +21,6 @@
         <th>Nearby red rocks sit 6,450 feet (1,970 m) above sea level</th>
     </tr>
     <tr>
-        <td>Copyright © 2019 Zippy Photographers</td>
+        <td rowspan="3">Copyright © 2019 Zippy Photographers</td>
     </tr>
 </table>
