--- a/index.html
+++ b/index.html
@@ -33,18 +33,20 @@
       them."</p>
    `<p>The center advises anyone who might come cross paths with rattlesnakes
       to be aware of these five things:</p>
-   <ol>Baby rattlesnakes range in length from 6 to 12 inches and are easily
-      camouflaged by brush and grass.</ol>
-   <ol>Baby rattlesnakes are rattleless until they first shed their skins, so there
-      will be no infamous "chica-chica" sound before they strike.</ol>
-   <ol>Despite their impish size, baby snakes have enough venom to be very
-      dangerous if they bite a human.</ol>
-   <ol>Adult rattlesnakes do not always rattle an audible warning before or
-   while they are biting.</ol>
-   <ol>It's a good idea to call the poison center if you notice an unidentified
-      small cut or wound, even if you feel no pain. With the lack of telltale
-      rattle warning, people can be bitten without knowing what has happened
-      until they notice their symptoms and attribute them to a snakebite.</ol>
+   <ol>
+      <li>Baby rattlesnakes range in length from 6 to 12 inches and are easily
+      camouflaged by brush and grass.</li>
+      <li>Baby rattlesnakes are rattleless until they first shed their skins, so there
+         will be no infamous "chica-chica" sound before they strike.</li>
+      <li>Despite their impish size, baby snakes have enough venom to be very
+         dangerous if they bite a human.</li>
+      <li>Adult rattlesnakes do not always rattle an audible warning before or
+         while they are biting.</li>
+      <li>It's a good idea to call the poison center if you notice an unidentified
+         small cut or wound, even if you feel no pain. With the lack of telltale
+         rattle warning, people can be bitten without knowing what has happened
+         until they notice their symptoms and attribute them to a snakebite.</li>
+   </ol>
    <p><a href="https://www.Twitter.com/"> Twitter </a></p>
    <p><a href="https://www.Facebook.com/"> Facebook </a></p>
    <p><a href="https://www.linkedin.com/"> LinkedIn</a></p>
