--- a/poem.html
+++ b/poem.html
@@ -19,5 +19,16 @@
     <p>
         By <cite>Emily Dickinson (1891)</cite>
     </p>
+
+    <blockquote style="padding: 2px 20px;
+background: #489bdb;">
+        <p>
+            <em>Don't believe every quote you read
+                on the Internet.</em>
+            <br>
+            --Abraham Lincoln
+        </p>
+    </blockquote>
+
 </body>
 </html>
