--- a/gallery.html
+++ b/gallery.html
@@ -1,26 +1,59 @@
-<table>
-    <caption>Red Rocks, Colorado</caption>
-    <tr>
-        <th>Photo</th>
-        <th>Date</th>
-        <th>Description</th>
-    </tr>
-    <tr>
-        <th><img src="vacation1.jpg" alt="Red Rock Amp Top Row Pic"></th>
-        <th>Jan 16, 2018</th>
-        <th>View from top row, sitting area holds 9,525</th>
-    </tr>
-    <tr>
-        <th><img src="vacation2.jpg" alt="Top of Amp"></th>
-        <th>Feb 20, 2017</th>
-        <th>Facing South from the top of the amphitheater</th>
-    </tr>
-    <tr>
-        <th><img src="vacation3.jpg" alt="Picture of the Red Rocks"></th>
-        <th>Mar 30, 2019</th>
-        <th>Nearby red rocks sit 6,450 feet (1,970 m) above sea level</th>
-    </tr>
-    <tr>
-        <td rowspan="3">Copyright © 2019 Zippy Photographers</td>
-    </tr>
-</table>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <!-- Some HTML goes here -->
+    <title>Gallery</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<header>
+    <img src="UniversityLogo.png" alt="The University of Arizona Logo">
+    <nav><a href="https://shanecmasse.github.io/2/hometown">Hometown</a>&nbsp;<a href="https://shanecmasse.github.io/2/gallery">Gallery</a>&nbsp;<a href="https://shanecmasse.github.io/2/poem">Poem</a>&nbsp;</nav>
+    <br>
+</header>
+<div class="content">
+    <!-- Majority of HTML goes here -->
+    <div class="sidebar">
+        <p>Sidebar</p>
+    </div>
+    <div class="maincontent">
+        <table>
+            <caption>Red Rocks, Colorado</caption>
+            <tr>
+                <th>Photo</th>
+                <th>Date</th>
+                <th>Description</th>
+            </tr>
+            <tr>
+                <th><img src="vacation1.jpg" alt="Red Rock Amp Top Row Pic"></th>
+                <th>Jan 16, 2018</th>
+                <th>View from top row, sitting area holds 9,525</th>
+            </tr>
+            <tr>
+                <th><img src="vacation2.jpg" alt="Top of Amp"></th>
+                <th>Feb 20, 2017</th>
+                <th>Facing South from the top of the amphitheater</th>
+            </tr>
+            <tr>
+                <th><img src="vacation3.jpg" alt="Picture of the Red Rocks"></th>
+                <th>Mar 30, 2019</th>
+                <th>Nearby red rocks sit 6,450 feet (1,970 m) above sea level</th>
+            </tr>
+            <tr>
+                <td rowspan="3">Copyright © 2019 Zippy Photographers</td>
+            </tr>
+        </table>
+    </div>
+
+
+</div>
+
+<footer>
+    <br>
+    <p><a href="https://www.Twitter.com/"> Twitter </a></p>
+    <p><a href="https://www.Facebook.com/"> Facebook </a></p>
+    <p><a href="https://www.linkedin.com/"> LinkedIn</a></p>
+</footer>
+</html>
+
