--- a/hometown.html
+++ b/hometown.html
@@ -3,42 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <title>About My Hometown</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-  <h1>Ashburn, USA</h1>
-    <section>
-        <h2>Location</h2>
-        <p>Ashburn is Located in Virginia. It is about 45 minutes Southwest of Washington D.C.</p>
-    </section>
-    <section>
-        <h2>About</h2>
+<header>
+    <img src="UniversityLogo.png" alt="The University of Arizona Logo">
+    <nav><a href="https://shanecmasse.github.io/2/hometown">Hometown</a>&nbsp;<a href="https://shanecmasse.github.io/2/gallery">Gallery</a>&nbsp;<a href="https://shanecmasse.github.io/2/poem">Poem</a>&nbsp;</nav>
+    <br>
+</header>
+<div class="content">
+    <!-- Majority of HTML goes here -->
+    <div class="sidebar">
+        <p>Sidebar</p>
+    </div>
+    <div class="maincontent">
+        <h1>Ashburn, USA</h1>
         <section>
-            <h3>Food</h3>
-            <section><p>There are many restaurants in and around Ashburn that have all kinds of different foods
-            for all kinds of different people</p>
-            </section>
+            <h2>Location</h2>
+            <p>Ashburn is Located in Virginia. It is about 45 minutes Southwest of Washington D.C.</p>
         </section>
         <section>
-            <h3>Transportation</h3>
-            <section><p>There is a vast metro system nearby and many public buses</p>
-            </section>
-        </section>
-        <section>
-            <h3>Schools</h3>
+            <h2>About</h2>
             <section>
-                <p>There are many elementary, middle, and high schools across the county with a wide variety of topics to study</p>
+                <h3>Food</h3>
+                <section><p>There are many restaurants in and around Ashburn that have all kinds of different foods
+                    for all kinds of different people</p>
+                </section>
+            </section>
+            <section>
+                <h3>Transportation</h3>
+                <section><p>There is a vast metro system nearby and many public buses</p>
+                </section>
+            </section>
+            <section>
+                <h3>Schools</h3>
+                <section>
+                    <p>There are many elementary, middle, and high schools across the county with a wide variety of topics to study</p>
+                </section>
             </section>
         </section>
-    </section>
-    <section>
-        <h2>Things To Do</h2>
-        <ul>
-            <li>Sports</li>
-            <li>Laser Tag</li>
-            <li>Hike</li>
-            <li>Jogging</li>
-        </ul>
+        <section>
+            <h2>Things To Do</h2>
+            <ul>
+                <li>Sports</li>
+                <li>Laser Tag</li>
+                <li>Hike</li>
+                <li>Jogging</li>
+            </ul>
 
-    </section>
-</body>
+        </section>
+    </div>
+
+
+</div>
+
+<footer>
+    <br>
+    <p><a href="https://www.Twitter.com/"> Twitter </a></p>
+    <p><a href="https://www.Facebook.com/"> Facebook </a></p>
+    <p><a href="https://www.linkedin.com/"> LinkedIn</a></p>
+</footer>
 </html>
