--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <div class="sidebar">
       <p>Sidebar</p>
    </div>
-   <div class="Snakethings">
+   <div class="maincontent">
       <h1>5 Things to Know About Rattlesnakes and Their Babies</h1>
       <p>UA College of Pharmacy | Aug. 6, 2014</p>
       <p>Arguably, snake season is year-round in Arizona, a state
