--- a/poem.html
+++ b/poem.html
@@ -3,32 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <title>Poem</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <p>I'm Nobody! Who are you?<br>
-        Are you - Nobody - Too?<br>
-        Then there's a pair of us!<br>
-        Don't tell! They'd banish us - you know!
-    </p>
-    <p>
-        How dreary - to be - Somebody!<br>
-        How public - like a Frog -<br>
-        To tell one's name - the livelong June -<br>
-        To an admiring Bog!
-    </p>
-    <p>
-        By <cite>Emily Dickinson (1891)</cite>
-    </p>
+<header>
+    <img src="UniversityLogo.png" alt="The University of Arizona Logo">
+    <nav><a href="https://shanecmasse.github.io/2/hometown">Hometown</a>&nbsp;<a href="https://shanecmasse.github.io/2/gallery">Gallery</a>&nbsp;<a href="https://shanecmasse.github.io/2/poem">Poem</a>&nbsp;</nav>
+    <br>
+</header>
+<div class="content">
+    <!-- Majority of HTML goes here -->
+    <div class="sidebar">
+        <p>Sidebar</p>
+    </div>
+    <div class="maincontent">
 
-    <blockquote style="padding: 2px 20px;
-background: #489bdb;">
-        <p>
-            <em>Don't believe every quote you read
-                on the Internet.</em>
-            <br>
-            --Abraham Lincoln
+        <p>I'm Nobody! Who are you?<br>
+            Are you - Nobody - Too?<br>
+            Then there's a pair of us!<br>
+            Don't tell! They'd banish us - you know!
         </p>
-    </blockquote>
+        <p>
+            How dreary - to be - Somebody!<br>
+            How public - like a Frog -<br>
+            To tell one's name - the livelong June -<br>
+            To an admiring Bog!
+        </p>
+        <p>
+            By <cite>Emily Dickinson (1891)</cite>
+        </p>
 
-</body>
+        <blockquote style="padding: 2px 20px;
+        background: #489bdb;">
+            <p>
+                <em>Don't believe every quote you read
+                    on the Internet.</em>
+                <br>
+                --Abraham Lincoln
+            </p>
+        </blockquote>
+    </div>
+
+
+</div>
+
+<footer>
+    <br>
+    <p><a href="https://www.Twitter.com/"> Twitter </a></p>
+    <p><a href="https://www.Facebook.com/"> Facebook </a></p>
+    <p><a href="https://www.linkedin.com/"> LinkedIn</a></p>
+</footer>
+
 </html>
