--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <header>
    <img src="UniversityLogo.png" alt="The University of Arizona Logo">
-   <nav><a href="https://shanecmasse.github.io/2/hometown">Hometown</a>&nbsp;<a href="https://shanecmasse.github.io/2/gallery">Gallery</a>&nbsp;<a href="https://shanecmasse.github.io/2/poem">Poem</a>&nbsp;</nav>
+   <nav><a href="hometown.html">Hometown</a>&nbsp;<a href="gallery.html">Gallery</a>&nbsp;<a href="poem.html">Poem</a>&nbsp;</nav>
    <br>
 </header>
 <div class="content">
